move cart and checkout to layout

--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,12 @@
   background: #555;
   transition: all 3s;
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
